--- a/ProyectoFinalP3/src/main/resources/application.properties
+++ b/ProyectoFinalP3/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://sql3.freesqldatabase.com:3306/sql3414679
-spring.datasource.username = sql3414679
-spring.datasource.password = LNiUk2cEK4
+spring.datasource.url = jdbc:mysql://sql10.freesqldatabase.com:3306/sql10416921
+spring.datasource.username = sql10416921
+spring.datasource.password = j9aAjXphkF
 
 spring.jpa.show-sql = true
 
